test/libsolidity/syntaxTests/structs/contract_global_struct_name_clash.sol
contract S {}
struct S { uint256 a; }
// ----
// DeclarationError: (14-37): Identifier already declared.
